# CFG-Library

./: CMakeLists.txt  LICENSE  README.md
CFG/Include/: CFG.h  CONFIG.h  cfg_system.h
CFG/Include/Optional include/: Singleton.h
CFG/Samples/CFG_SYS/: CFG_SYS.sln
CFG/Samples/CFG_SYS/CFG_SYS/: CFG_SYS.cpp  CFG_SYS.vcxproj  CFG_SYS.vcxproj.filters  CONFIG.h  cfg_system.h
CFG/Samples/CFG_SYS/CFG_SYS/x64/Release/: CFG_SYS.exe.recipe
CFG/Samples/CFG_SYS/CFG_SYS/x64/Release/CFG_SYS.tlog/: CFG_SYS.lastbuildstate
CFG/Samples/Example/CFG_SYS/: CFG_SYS.cpp  CFG_SYS.vcxproj  CFG_SYS.vcxproj.filters  Globals.h  Singleton.h  cfg_system.h
CFG/Samples/Example/CFG_SYS/x64/Release/: CFG_SYS.exe.recipe  CFG_SYS.ipdb
CFG/Samples/Example/CFG_SYS/x64/Release/CFG_SYS.tlog/: CFG_SYS.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CFG/Samples/MySettings/: Settings.json
CMake/: CMakeLists.txt  Globals.h
Include/: License.txt
Samples/MySettings/: Settings.json
